워크스페이스 구조 생성, 자바 빌드 가능 버전